Add calendar view to visualize scheduled jobs by month

--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -12,6 +12,7 @@
             <li><a href="/">Dashboard</a></li>
             <li><a href="/customers">Customers</a></li>
             <li><a href="/jobs" class="active">Jobs</a></li>
+            <li><a href="/calendar">Calendar</a></li>
             <li><a href="/inventory">Inventory</a></li>
             <li><a href="/materials">Materials</a></li>
             <li><a href="/reports">Reports</a></li>
